--- a/public/chat.html
+++ b/public/chat.html
@@ -16,7 +16,15 @@
 <body>
     <div class="container">
         <div class="active">
-            <div class="menu">menu</div>
+            <div class="menu">
+                <div class="top-nav">
+                    <button id="undo-btn">Undo</button>
+                    <button id="clear-btn">Clear</button>
+                    <input type="color" id="color-picker">
+                    <input type="range" id="brush-size" min="1" max="50" value="10">
+                </div>
+                <canvas id="paint"></canvas>
+            </div>
             <div class="chat">
                 <div class="chat-top">top</div>
                 <div id="chatLogs"></div>
