--- a/public/chat.html
+++ b/public/chat.html
@@ -40,6 +40,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
+    <script src="js/paint.js"></script>
     
 </body>
 </html>
